--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Aravind Surya</title>
+		<title></title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="HandheldFriendly" content="true">
 	</head>
 	<body>
 
+		<div class="logo">
+			<a href="">Aravind.</a>
+		</div>
+
 		<div class="nav">
 			<ul>
-				<li class="hover1">HOME</li>
-				<li class="hover">ABOUT</li>
-				<li class="hover">PORTFOLIO</li>
-				<li class="hover">CONTACT</li>
+				<a href=""><li class="hover1">HOME</li></a>
+				<a href=""><li class="hover">ABOUT</li></a>
+				<a href=""><li class="hover">PORTFOLIO</li></a>
+				<a href=""><li class="hover">CONTACT</li></a>
 			</ul>
 		</div>
+
 
 		<div class="h1">
 			Hey There!
 		</div>
 
 		<div class="h2">
-			<b>I'm ARAVIND</b>
+			I'm <span class="name">ARAVIND</span>
 		</div>
 
 		<div class="h3">
 			I'm a Freelance Web Designer
 		</div>
 
-		<button class="hireme"> Hire Me </button>
-
-
-		<div class="box1"></div>
-		<div class="box2"></div>
+		<div class="btndiv">
+			<button class="button hireme"> Hire Me </button>
+		</div>
 
 	</body>
 </html>
