--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<div class="btndiv">
-			<button class="button hireme"> Hire Me </button>
+			<a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDZBRCcxkfZfCTMqTPDvFlpwjPnVlmHBSlLrSQSjFKDgzJZjMmXQGNxXxQZsRhSpvtrjNWL"> <button class="button hireme"> Hire Me </button> </a>
 		</div>
 
 	</body>
