--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,32 +19,13 @@
 
 		<div class="nav">
 			<ul>
-				<a href="index.html"><li class="hover1">HOME</li></a>
+				<a href="index.html"><li class="hover">HOME</li></a>
 				<a href="About.html"><li class="hover">ABOUT</li></a>
-				<a href="Portfolio.html"><li class="hover">PORTFOLIO</li></a>
+				<a href="Portfolio.html"><li class="hover1">PORTFOLIO</li></a>
 				<a href="Contact.html"><li class="hover">CONTACT</li></a>
 			</ul>
 		</div>
 
-
-		<div class="h1">
-			Hey There!
-		</div>
-
-		<div class="h2">
-			I'm <span class="name">ARAVIND</span>
-		</div>
-
-		<div class="h3">
-			I'm a Freelance Web Designer
-		</div>
-
-		<div class="btndiv">
-			<a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDZBRCcxkfZfCTMqTPDvFlpwjPnVlmHBSlLrSQSjFKDgzJZjMmXQGNxXxQZsRhSpvtrjNWL"> <button class="hireme"> Hire Me </button> </a>
-
-
-
-		</div>
 
 	</body>
 </html>
