--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Aravind Surya</title>
+		<title>Aravind Surya - About</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -19,31 +19,11 @@
 
 		<div class="nav">
 			<ul>
-				<a href="index.html"><li class="hover1">HOME</li></a>
-				<a href="About.html"><li class="hover">ABOUT</li></a>
+				<a href="index.html"><li class="hover">HOME</li></a>
+				<a href="About.html"><li class="hover1">ABOUT</li></a>
 				<a href="Portfolio.html"><li class="hover">PORTFOLIO</li></a>
 				<a href="Contact.html"><li class="hover">CONTACT</li></a>
 			</ul>
-		</div>
-
-
-		<div class="h1">
-			Hey There!
-		</div>
-
-		<div class="h2">
-			I'm <span class="name">ARAVIND</span>
-		</div>
-
-		<div class="h3">
-			I'm a Freelance Web Designer
-		</div>
-
-		<div class="btndiv">
-			<a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDZBRCcxkfZfCTMqTPDvFlpwjPnVlmHBSlLrSQSjFKDgzJZjMmXQGNxXxQZsRhSpvtrjNWL"> <button class="hireme"> Hire Me </button> </a>
-
-
-
 		</div>
 
 	</body>
